--- a/src/layouts/article-layout.astro
+++ b/src/layouts/article-layout.astro
@@ -41,7 +41,7 @@ const formattedDate = new Intl.DateTimeFormat("en-GB", {
 
   <main aria-label="Main content" class="min-h-screen">
     <div class="mx-auto max-w-3xl">
-      <Pattern className="h-14">
+      <!-- <Pattern className="h-14">
         <LinkBtn
           ariaLabel="Back link"
           className="absolute bottom-0 left-2 z-1"
@@ -49,7 +49,7 @@ const formattedDate = new Intl.DateTimeFormat("en-GB", {
         >
           <ArrowLeft />
         </LinkBtn>
-      </Pattern>
+      </Pattern> -->
 
       <Box>
         <BoxHeader class="text-sm !font-medium text-muted-foreground">
