--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -15,7 +15,7 @@ const sideProjects = projects.filter(project => project.data.type === "side");
 ---
 
 <PageLayout
-  description="A collection of things I’ve built, full-stack apps, experiments, and side projects."
+  description="A collection of things I’ve built, contributions are always welcome."
   title="My Projects"
 >
   <Pattern />
