--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,27 +3,9 @@ import { SOCIAL_LINKS } from "@/lib/constants";
 ---
 
 <footer class="w-full border-t border-dashed md:border-b">
-  <div
-    class="mx-auto flex max-w-3xl flex-col-reverse items-center justify-between gap-4 border-dashed px-4 py-3 md:border-x lg:flex-row"
-  >
+  <div class="mx-auto flex max-w-3xl items-center justify-center border-dashed px-4 py-3 md:border-x">
     <p class="text-sm text-foreground/70">
-      Built by <a
-        href="https://github.com/Louai-Zokerburg"
-        class="font-medium text-primary underline underline-offset-4">Louai.b</a
-      > • source code available on <a
-        href="https://github.com/Louai-Zokerburg/louai"
-        class="font-medium text-primary underline underline-offset-4">Github</a
-      >
+      © 2025 Wenjun Wu. All rights reserved.
     </p>
-
-    <div class="flex items-center justify-center gap-4">
-      {
-        SOCIAL_LINKS.map(link => (
-          <a href={link.url} aria-label={link.name}>
-            <link.icon className="size-4 duration-150 hover:text-primary" />
-          </a>
-        ))
-      }
-    </div>
   </div>
 </footer>
