--- a/src/components/sections/experiences.astro
+++ b/src/components/sections/experiences.astro
@@ -10,12 +10,12 @@ import BoxContent from "@/components/box/content.astro";
 
 <Box>
   <BoxHeader>
-    <BoxTitle> About </BoxTitle>
+    <BoxTitle> Experiences </BoxTitle>
   </BoxHeader>
   <BoxContent>
     <MarkdownRenderer
       className="text-base leading-8 font-normal"
-      content={PROFILE_INFO.about}
+      content={PROFILE_INFO.experiences}
     />
 
   </BoxContent>
