--- a/src/layouts/page-layout.astro
+++ b/src/layouts/page-layout.astro
@@ -26,7 +26,7 @@ const { title, description, backLink } = Astro.props;
 <Layout title={`${title}`}>
   <Navbar />
   <main class="mx-auto min-h-screen max-w-3xl" aria-label="Main content">
-    <Pattern className="h-14">
+    <!-- <Pattern className="h-14">
       {
         backLink && (
           <LinkBtn
@@ -38,7 +38,7 @@ const { title, description, backLink } = Astro.props;
           </LinkBtn>
         )
       }
-    </Pattern>
+    </Pattern> -->
 
     <Box>
       <BoxHeader>
