--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -4,9 +4,6 @@ import Pattern from "@/components/ui/pattern.astro";
 import Box from "@/components/box/index.astro";
 import BoxTitle from "@/components/box/title.astro";
 import BoxHeader from "@/components/box/header.astro";
-import BoxContent from "@/components/box/content.astro";
-
-import LinkTag from "@/components/ui/link-tag.astro";
 
 import { getCollection } from "astro:content";
 
@@ -14,16 +11,6 @@ import { SITE } from "@/lib/config";
 import type { GetStaticPaths } from "astro";
 import Pagination from "@/components/pagination.astro";
 import PageLayout from "@/layouts/page-layout.astro";
-
-const articles = await getCollection("blog");
-const categories = [...new Set(articles.map(article => article.data.category))];
-const series = [
-  ...new Set(
-    articles
-      .map(article => article.data.series)
-      .filter(series => series !== undefined)
-  ),
-];
 
 export const getStaticPaths = (async ({ paginate }) => {
   const articles = await getCollection("blog", ({ data }) => !data.draft);
@@ -37,43 +24,9 @@ const { page } = Astro.props;
 ---
 
 <PageLayout
-  description="Exploring frontend, backend, and full-stack developmen deep dives, series, and hands-on insights."
-  title="Software Engineering Notes"
+  description="Exploring deep dives and hands-on insights in AI frontiers, algorithms, and systems."
+  title="Research Notes"
 >
-  <Pattern />
-
-  <Box>
-    <BoxHeader>
-      <BoxTitle>Series</BoxTitle>
-    </BoxHeader>
-    <BoxContent>
-      <div class="flex flex-wrap items-center justify-start gap-x-4 gap-y-3">
-        {
-          series.map(seriesItem => (
-            <LinkTag href={`articles/series/${seriesItem}`} tag={seriesItem} />
-          ))
-        }
-      </div>
-    </BoxContent>
-  </Box>
-
-  <Pattern />
-
-  <Box>
-    <BoxHeader>
-      <BoxTitle>Categories</BoxTitle>
-    </BoxHeader>
-    <BoxContent>
-      <div class="flex flex-wrap items-center justify-start gap-x-4 gap-y-3">
-        {
-          categories.map(category => (
-            <LinkTag href={`articles/categories/${category}`} tag={category} />
-          ))
-        }
-      </div>
-    </BoxContent>
-  </Box>
-
   <Pattern />
 
   <Box>
