--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,25 +5,42 @@ import Footer from "@/components/footer.astro";
 import Pattern from "@/components/ui/pattern.astro";
 import Profile from "@/components/profile.astro";
 import About from "@/components/sections/about.astro";
-import TechStack from "@/components/tech-stack.astro";
-import Experience from "@/components/sections/experience/experience.astro";
+// import TechStack from "@/components/tech-stack.astro";
+import News from "@/components/sections/news.astro";
+import Papers from "@/components/sections/papers.astro";
+import Talks from "@/components/sections/talks.astro";
+import Experiences from "@/components/sections/experiences.astro";
+import Education from "@/components/sections/education.astro";
+import Misc from "@/components/sections/misc.astro";
+
 ---
 
-<Layout title="Louai Boumediene">
+<Layout title="Wenjun Wu">
   <Navbar />
 
   <main
     aria-label="Main content"
     class="mx-auto min-h-[calc(100vh-120px)] max-w-3xl"
   >
-    <Pattern className="h-14" />
+    <!-- <Pattern className="h-14" /> -->
     <Profile />
-    <Pattern />
+    <!-- <Pattern /> -->
     <About />
     <Pattern />
-    <TechStack />
+    <!-- <TechStack /> -->
+    <!-- <Pattern /> -->
+    <News />
     <Pattern />
-    <Experience />
+    <Papers />
+    <Pattern />
+    <Talks />
+    <Pattern />
+    <Experiences />
+    <Pattern />
+    <Education />
+    <Pattern />
+
+    <Misc />
     <Pattern />
   </main>
 
