--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,7 +129,10 @@ body {
   @apply overscroll-none bg-background text-foreground;
   font-synthesis-weight: none;
   text-rendering: optimizeLegibility;
+  font-size: 16px;
+  line-height: 1.6;
 }
+
 
 h1,
 h2,
