Correct the link address of the research institution

--- a/src/components/profile.astro
+++ b/src/components/profile.astro
@@ -49,7 +49,7 @@ import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
         <p class="text-base font-medium leading-relaxed">
           Researcher at
           <a
-            href="https://gengzhige.ai/gair.html"
+            href="https://gair.ai/"
             target="_blank"
             class="text-blue-500 hover:text-blue-600 font-semibold"
           >
